--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -17,9 +17,10 @@ $font-family-sans-serif: "Roboto", sans-serif;
 $navbar-brand-margin-end: 30px;
 $enable-rounded: false;
 $enable-gradients: true;
+
 table {
   width: 100%;
-  max-width: 600px;
+  max-width: 100%;
   overflow-x: auto;
 }
 .user-top p {
