--- a/sass/custom.css
+++ b/sass/custom.css
@@ -53,7 +53,7 @@ div.modal-header {
   background-color: #0f69b4 !important;
   color: white;
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1rem;
   background-image: linear-gradient(#0f69b4, #001c41);
 }
 
@@ -133,7 +133,7 @@ nav.navbar-dark {
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
-  --bs-body-font-size: 1rem;
+  --bs-body-font-size: 0.9rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
@@ -697,7 +697,7 @@ progress {
   margin-bottom: 0.5rem;
   line-height: 1;
 }
-
+ontainer
 .figure-caption {
   font-size: 0.875em;
   color: #6c757d;
@@ -721,7 +721,7 @@ progress {
 
 @media (min-width: 576px) {
   .container-sm, .container {
-    max-width: 540px;
+    max-width: 800px;
   }
 }
 @media (min-width: 768px) {
@@ -4490,7 +4490,7 @@ textarea.form-control-lg {
 .pagination {
   --bs-pagination-padding-x: 0.75rem;
   --bs-pagination-padding-y: 0.375rem;
-  --bs-pagination-font-size: 1rem;
+  --bs-pagination-font-size: 0.5rem;
   --bs-pagination-color: var(--bs-link-color);
   --bs-pagination-bg: #fff;
   --bs-pagination-border-width: 1px;
