--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4127,7 +4127,7 @@ textarea.form-control-lg {
   --bs-card-inner-border-radius: calc(0.375rem - 1px);
   --bs-card-cap-padding-y: 0.5rem;
   --bs-card-cap-padding-x: 1rem;
-  --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+  --bs-card-cap-bg:#f8f9fa;
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
